# risn1

./: README.md  acml.txt  faces_pos.txt  frames_2025-04-09_21.28.17.gv  frames_2025-04-10_14.48.00.gv  odom.txt  positions.txt  pot.txt  rand.txt  test.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dis_tutorial3/lib/dis_tutorial3/: detect_people_custom.py  detect_rings_mod.py  dp2.py  dr3.py  dr4.py  face_filter.py  get_coords.py  robot_commander.py
install/dis_tutorial3/share/ament_index/resource_index/parent_prefix_path/: dis_tutorial3
install/dis_tutorial3/share/dis_tutorial3/: local_setup.sh  package.sh
install/dis_tutorial3/share/dis_tutorial3/maps/: my_map.pgm
log/: latest_build
src/dis_tutorial3/: CMakeLists.txt  package.xml
src/dis_tutorial3/launch/: sim_turtlebot_nav.launch.py  sim_turtlebot_slam.launch.py
src/dis_tutorial3/maps/: my_map.yaml  nasamapa.pgm  nasamapa.yaml
src/dis_tutorial3/scripts/: clicked_point_listener.py  detect_rings_mod.py  dp2.py  dr2.py  face_filter.py  get_rings.py  main.py  planes.py  rings_filter.py  robot_commander.py  robot_commander_custom.py  start_round.py
